added polling for dynamic content

--- a/addon/templates/components/ui-code-highlight.hbs
+++ b/addon/templates/components/ui-code-highlight.hbs
@@ -1,6 +1,6 @@
-<code class="{{codeClass}}">
+<span class="shadow-dom {{if ref 'daylight' 'hidden'}}">
 {{yield}}
-{{#if ref}}
+</span>
+<code class="{{codeClass}}">
 {{content}}
-{{/if}}
 </code>
