small adj to dom-component

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -175,8 +175,7 @@ fi
             </note>
         </div>
     </div>
-
-    <div class='dom-reference-example'>
+    <div class="dom-reference-example">
         <h3>dom-reference</h3>
         <div class="row">
             <desc>
@@ -197,7 +196,6 @@ fi
             </desc>
         </div>        
     </div>
-
     <div class="row">
         <div class="col-xs-4">
             {{#code-block language="handlebars" border=true}}
